--- a/assets/bower.json
+++ b/assets/bower.json
@@ -14,6 +14,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootswatch": "~3.3.x"
+    "bootswatch": "~3.3.x",
+    "bootstrap": "~3.3.1"
   }
 }
