--- a/assets/bower.json
+++ b/assets/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "bootswatch": "~3.3.x",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "jquery": "~2.1.3"
   }
 }
