--- a/assets/package.json
+++ b/assets/package.json
@@ -2,10 +2,40 @@
   "name": "assets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
+  "dependencies": {
+    "flux": "^2.0.0",
+    "form-serializer": "^2.0.1",
+    "jquery": "^2.1.1",
+    "keymirror": "~0.1.0",
+    "object-assign": "^1.0.0",
+    "q": "^1.1.2",
+    "react": "~0.12.0",
+    "react-bootstrap": "^0.13.0",
+    "react-bootstrap-async-autocomplete": "0.0.3",
+    "react-form-data": "^0.1.0",
+    "react-router": "^0.11.4",
+    "request": "^2.51.0"
+  },
+  "devDependencies": {
+    "browserify": "~4.2.2",
+    "envify": "~2.0.1",
+    "jest-cli": "~0.1.17",
+    "reactify": "~0.14.0",
+    "uglify-js": "~2.4.15",
+    "watchify": "~0.10.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "watchify -o js/bundle.js -v -d .",
+    "build": "NODE_ENV=production browserify . | uglifyjs -cm > js/bundle.min.js",
+    "test": "jest"
   },
   "author": "Joseph Ramos <joseph.ramos@taller.net.br>",
+  "browserify": {
+    "transform": [
+      "reactify",
+      "envify"
+    ]
+  },
   "license": "ISC"
 }
