--- a/assets/package.json
+++ b/assets/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "watchify -o js/bundle.js -v -d .",
-    "build": "NODE_ENV=production browserify . | uglifyjs -cm > js/bundle.min.js",
+    "build": "browserify . > js/bundle.js",
     "test": "jest"
   },
   "author": "Joseph Ramos <joseph.ramos@taller.net.br>",
