--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agreement-app",
+  "name": "waste-money",
   "private": true,
   "version": "0.0.0",
   "description": "a Sails application",
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "start": "node app.js",
-    "debug": "node debug app.js"
+    "debug": "node debug app.js",
+    "postinstall": "bash postinstall.sh"
   },
   "main": "app.js",
   "repository": {
