--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "flux": "^2.0.0",
     "form-serializer": "^2.0.1",
+    "immutable": "^3.4.1",
     "jquery": "^2.1.1",
     "keymirror": "~0.1.0",
     "object-assign": "^1.0.0",
