--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.10.4"
   },
+  "devDependencies": {
+    "browserify": "^8.0.3",
+    "gulp": "^3.8.10",
+    "gulp-compass": "^2.0.3",
+    "reactify": "^0.17.1",
+    "require-dir": "^0.1.0",
+    "vinyl-source-stream": "^1.0.0"
+  },
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js",
